# transmission-tui

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: config.rs  main.rs  model.rs  preferences.rs  rpc.rs  tui.rs
