[package]
name = "transmission-tui"
version = "0.0.5"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
crossbeam-channel = "0.5"
dirs = "5.0"
env_logger = "0.11"
log = "0.4"
ratatui = "0.27"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.7"
thiserror = "1.0"
toml = "0.8"
time = { version = "=0.3.36", default-features = false }
